applications/rustlens/overlays/master/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: master
  namespace: rustlens
spec:
  replicas: 1
  selector:
    matchLabels:
      app: master
  template:
    metadata:
      labels:
        app: master
    spec:
      imagePullSecrets:
        - name: github-pull-secret
      containers:
        - name: master
          ports:
            - containerPort: 4000
          image: ghcr.io/vanguard-enterprise/rustlens-agent-master:eda26bbc1da27e3cad52f2a047c819c8959af985
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
