applications/rustlens/overlays/master/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: master
  namespace: rustlens
spec:
  type: ClusterIP
  ports:
    - port: 4000
      targetPort: 4000
  selector:
    app: master
