applications/rustlens/overlays/master/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: master-rustlens
  namespace: rustlens
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`agent.rustlens.com`)
      kind: Rule
      services:
        - name: master
          port: 4000
  tls:
    store:
      name: rustlens
      namespace: traefik
